refactor mogak jogak service results