@@ -16,8 +16,14 @@ import com.mogak.spring.exception.MogakException;
 import com.mogak.spring.exception.UserException;
 import com.mogak.spring.global.ErrorCode;
 import com.mogak.spring.repository.*;
+import com.mogak.spring.service.result.jogak.CreateJogakResult;
+import com.mogak.spring.service.result.jogak.DailyJogakListResult;
+import com.mogak.spring.service.result.jogak.DailyJogakResult;
+import com.mogak.spring.service.result.jogak.DetailJogakResult;
+import com.mogak.spring.service.result.jogak.JogakDailyJogakResult;
+import com.mogak.spring.service.result.jogak.OneTimeJogakListResult;
+import com.mogak.spring.service.result.jogak.RoutineJogakResult;
 import com.mogak.spring.web.dto.jogakdto.JogakRequestDto;
-import com.mogak.spring.web.dto.jogakdto.JogakResponseDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -89,7 +95,7 @@ public class JogakServiceImpl implements JogakService {
 
     @Transactional
     @Override
-    public JogakResponseDto.CreateJogakDto createJogak(Long userId, JogakRequestDto.CreateJogakDto createJogakDto) {
+    public CreateJogakResult createJogak(Long userId, JogakRequestDto.CreateJogakDto createJogakDto) {
         Mogak mogak = mogakRepository.findActiveById(createJogakDto.mogakId())
                 .orElseThrow(() -> new MogakException(ErrorCode.NOT_EXIST_MOGAK));
         validateMogakOwner(userId, mogak);
@@ -129,10 +135,10 @@ public class JogakServiceImpl implements JogakService {
                 jogakPeriodRepository.save(JogakPeriod.of(period, jogak));
                 days.add(period.getDays());
             }
-            return JogakResponseDto.createFromJogak(jogak, days);
+            return CreateJogakResult.of(jogak, days);
         }
         // 루틴이 없는 경우
-        return JogakResponseDto.createFromJogak(jogak);
+        return CreateJogakResult.of(jogak, null);
     }
 
     // 모각의 조각 개수 검증
@@ -142,7 +148,7 @@ public class JogakServiceImpl implements JogakService {
 
     @Transactional
     @Override
-    public JogakResponseDto.CreateJogakDto updateJogak(Long userId, Long jogakId, JogakRequestDto.UpdateJogakDto updateJogakDto) {
+    public CreateJogakResult updateJogak(Long userId, Long jogakId, JogakRequestDto.UpdateJogakDto updateJogakDto) {
         Jogak jogak = jogakRepository.findActiveById(jogakId)
                 .orElseThrow(() -> new JogakException(ErrorCode.NOT_EXIST_JOGAK));
         validateJogakOwner(userId, jogak);
@@ -157,7 +163,7 @@ public class JogakServiceImpl implements JogakService {
             jogakPeriodRepository.deleteAllByJogakId(jogak.getId());
         }
 
-        return JogakResponseDto.createFromJogak(jogak);
+        return CreateJogakResult.of(jogak, null);
     }
 
     private void validatePeriod(Optional<Boolean> isRoutineOptional, Optional<List<String>> daysOptional) {
@@ -214,47 +220,51 @@ public class JogakServiceImpl implements JogakService {
     }
 
     @Override
-    public JogakResponseDto.GetOneTimeJogakListDto getDailyJogaks(Long userId, LocalDate day) {
+    public OneTimeJogakListResult getDailyJogaks(Long userId, LocalDate day) {
         User user = userRepository.findActiveById(userId)
                 .orElseThrow(() -> new UserException(ErrorCode.NOT_EXIST_USER));
         List<Jogak> jogakList = jogakRepository.findActiveOneTimeJogaksByUser(user);
         List<DailyJogak> dailyJogak = dailyJogakRepository.findDailyJogaks(user, day);
-        return JogakResponseDto.oneTimeJogakListFrom(jogakList, dailyJogak);
+        return OneTimeJogakListResult.of(jogakList, dailyJogak);
     }
 
     @Override
-    public JogakResponseDto.GetDailyJogakListDto getDayJogaks(Long userId, LocalDate day) {
+    public DailyJogakListResult getDayJogaks(Long userId, LocalDate day) {
         User user = userRepository.findActiveById(userId)
                 .orElseThrow(() -> new UserException(ErrorCode.NOT_EXIST_USER));
         if (day.isAfter(LocalDate.now())) {
             // 미래 루틴 조각 가져오기
             List<Jogak> userRoutineJogaks = jogakRepository.findDailyRoutineJogaks(user, dateToNum(day));
-            return JogakResponseDto.dailyJogakListFromDtos(
+            return DailyJogakListResult.from(
                     userRoutineJogaks.stream()
                             .filter(jogak -> jogak.getEndAt() == null || jogak.getEndAt().isAfter(day))
-                            .map(JogakResponseDto::futureDailyJogakFromJogak)
-                            .collect(Collectors.toList()));
+                            .map(DailyJogakResult::futureFrom)
+                            .toList());
         }
-        return JogakResponseDto.dailyJogakListFrom(dailyJogakRepository.findDailyJogaks(user, day));
+        return DailyJogakListResult.from(
+                dailyJogakRepository.findDailyJogaks(user, day).stream()
+                        .map(DailyJogakResult::from)
+                        .toList()
+        );
     }
 
     /**
      * 주간/월간 루틴 가져오는 API
      * */
     @Override
-    public List<JogakResponseDto.GetRoutineJogakDto> getRoutineJogaks(Long userId, LocalDate startDate, LocalDate endDate) {
+    public List<RoutineJogakResult> getRoutineJogaks(Long userId, LocalDate startDate, LocalDate endDate) {
         User user = userRepository.findActiveById(userId)
                 .orElseThrow(() -> new UserException(ErrorCode.NOT_EXIST_USER));
         List<LocalDate> pastDates = getPastDates(startDate, endDate);
         List<LocalDate> futureDates = getFutureDates(startDate, endDate);
-        List<JogakResponseDto.GetRoutineJogakDto> routineJogaks = new ArrayList<>();
+        List<RoutineJogakResult> routineJogaks = new ArrayList<>();
 
         // 오늘 + 이전 가져오기
         if (!pastDates.isEmpty()) {
             List<DailyJogak> pastJogaks = dailyJogakRepository.findDailyJogaksBetween(user, startDate, endDate);
             routineJogaks.addAll(pastJogaks.stream()
-                    .map(JogakResponseDto::routineJogakFrom)
-                    .collect(Collectors.toList()));
+                    .map(RoutineJogakResult::from)
+                    .toList());
         }
 
         // 미래 가져오기
@@ -280,7 +290,7 @@ public class JogakServiceImpl implements JogakService {
                             log.debug(i.getEndAt() + " , " + date);
                             // 기간에 해당하지 않는 조각은 가져오지 않는 로직
                             if (i.getEndAt() == null || i.getEndAt().isAfter(date)) {
-                                routineJogaks.add(JogakResponseDto.futureRoutineJogakFrom(date, i.getTitle()));
+                                routineJogaks.add(RoutineJogakResult.futureFrom(date, i.getTitle()));
                             }
                         });
             }
@@ -312,7 +322,7 @@ public class JogakServiceImpl implements JogakService {
 
     @Transactional
     @Override
-    public JogakResponseDto.JogakDailyJogakDto startJogak(Long userId, Long jogakId) {
+    public JogakDailyJogakResult startJogak(Long userId, Long jogakId) {
         Jogak jogak = jogakRepository.findActiveById(jogakId)
                 .orElseThrow(() -> new JogakException(ErrorCode.NOT_EXIST_JOGAK));
         validateJogakOwner(userId, jogak);
@@ -323,12 +333,12 @@ public class JogakServiceImpl implements JogakService {
             throw new JogakException(ErrorCode.ALREADY_START_JOGAK);
         }
         DailyJogak dailyJogak = dailyJogakRepository.save(DailyJogak.create(jogak, today));
-        return JogakResponseDto.jogakDailyJogakFrom(jogak, dailyJogak);
+        return JogakDailyJogakResult.of(jogak, dailyJogak);
     }
 
     @Transactional
     @Override
-    public JogakResponseDto.JogakDailyJogakDto successJogak(Long userId, Long dailyJogakId) {
+    public JogakDailyJogakResult successJogak(Long userId, Long dailyJogakId) {
         DailyJogak dailyJogak = dailyJogakRepository.findActiveByIdWithJogakGraph(dailyJogakId)
                 .orElseThrow(() -> new JogakException(ErrorCode.NOT_EXIST_DAILY_JOGAK));
         validateDailyJogakOwner(userId, dailyJogak);
@@ -336,12 +346,12 @@ public class JogakServiceImpl implements JogakService {
 
         updateStatus(DailyJogakStatus.SUCCESS, jogak, dailyJogak);
 
-        return JogakResponseDto.jogakDailyJogakFrom(jogak, dailyJogak);
+        return JogakDailyJogakResult.of(jogak, dailyJogak);
     }
 
     @Transactional
     @Override
-    public JogakResponseDto.JogakDailyJogakDto failJogak(Long userId, Long dailyJogakId) {
+    public JogakDailyJogakResult failJogak(Long userId, Long dailyJogakId) {
         DailyJogak dailyJogak = dailyJogakRepository.findActiveByIdWithJogakGraph(dailyJogakId)
                 .orElseThrow(() -> new JogakException(ErrorCode.NOT_EXIST_DAILY_JOGAK));
         validateDailyJogakOwner(userId, dailyJogak);
@@ -349,7 +359,7 @@ public class JogakServiceImpl implements JogakService {
 
         updateStatus(DailyJogakStatus.FAIL, jogak, dailyJogak);
 
-        return JogakResponseDto.jogakDailyJogakFrom(jogak, dailyJogak);
+        return JogakDailyJogakResult.of(jogak, dailyJogak);
     }
 
     private void updateStatus(DailyJogakStatus nextStatus, Jogak jogak, DailyJogak dailyJogak) {
@@ -372,7 +382,7 @@ public class JogakServiceImpl implements JogakService {
         dailyJogak.updateStatus(nextStatus);
     }
 
-    private JogakResponseDto.DetailJogakDto getJogakDetail(Jogak jogak) {
+    private DetailJogakResult getJogakDetail(Jogak jogak) {
         Mogak mogak = mogakRepository.findByJogak(jogak)
                 .orElseThrow(() -> new BaseException(ErrorCode.NOT_EXIST_MOGAK));
 
@@ -380,13 +390,13 @@ public class JogakServiceImpl implements JogakService {
             List<String> periods = periodRepository.findPeriodsByJogak(jogak).stream()
                     .map(Period::getDays)
                     .collect(Collectors.toList());
-            return JogakResponseDto.detailFromJogak(jogak, mogak.getColor(), periods);
+            return DetailJogakResult.of(jogak, mogak.getColor(), periods);
         }
-        return JogakResponseDto.detailFromJogak(jogak, mogak.getColor());
+        return DetailJogakResult.of(jogak, mogak.getColor(), null);
     }
 
     @Override
-    public JogakResponseDto.DetailJogakDto getJogakDetail(Long userId, Long jogakId) {
+    public DetailJogakResult getJogakDetail(Long userId, Long jogakId) {
         Jogak jogak = jogakRepository.findActiveById(jogakId)
                 .orElseThrow(() -> new JogakException(ErrorCode.NOT_EXIST_JOGAK));
         validateJogakOwner(userId, jogak);
